--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^6.7.1",
+    "ejs": "^3.1.8",
+    "ejs-html-loader": "^4.0.1",
+    "ejs-render-loader": "^1.0.0",
     "file-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.3",
@@ -34,6 +38,7 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "ejs-compiled-loader": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
