--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "webpack --mode development",
     "dev_cleanup": "rm -rf dist",
     "watch": "webpack --mode development --watch",
-    "start": "dev_cleanup & npm run watch & webpack-dev-server"
+    "start": "npm run watch & webpack-dev-server"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
