--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "sass-loader": "^13.1.0",
     "terser-webpack-plugin": "^5.3.6",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
@@ -44,4 +46,3 @@
     "react-dom": "^18.2.0"
   }
 }
-
